HW ANN part B complete

--- a/Homework/ANN/Makefile
+++ b/Homework/ANN/Makefile
@@ -5,33 +5,32 @@ LDLIBS = -lstdc++ -lm
 
 # Source files
 MATRIX_SRC = ../../Matrix/matrix.cpp
-QR_SRC = ../QR/src/QR.cpp
-NEWTON_SRC = ../Min/src/newton.cpp
 GRADIENT_SRC = ../Min/src/gradient.cpp
-HESSIAN_SRC = ../Min/src/hessian.cpp
-ANN_SRC = ANN.cpp
-MAIN_SRC = main.cpp
+QNEWTON_SRC = src/qnewton.cpp
+ANN_SRC = src/ANN.cpp
+MAIN_SRC = src/main.cpp
 
 # Object files
 MATRIX_OBJ = obj/matrix.o
-QR_OBJ = QR.o
-NEWTON_OBJ = obj/newton.o
 GRADIENT_OBJ = obj/gradient.o
-HESSIAN_OBJ = obj/hessian.o
+QNEWTON_OBJ = obj/qnewton.o
 ANN_OBJ = obj/ANN.o
 MAIN_OBJ = obj/main.o
 
 # Executable
 MAIN = exe/main
 
-all: folders $(MAIN) plot.svg
+all: folders $(MAIN) plots
+
+plots: partA.svg first_derivative.svg second_derivative.svg integral.svg
 
 folders:
+	mkdir -p data
 	mkdir -p exe
 	mkdir -p plots
 	mkdir -p obj
 
-plot.svg:
+partA.svg:
 	echo '\
 			set terminal $(subst .,,$(suffix $@)) background "white"; \
 			set output "plots/$@"; \
@@ -39,14 +38,63 @@ plot.svg:
 			set key right;\
 			set xlabel "x";\
 			set ylabel "y";\
-			set title "Neural Network fit";\
+			set xrange[1:-1];\
+			set title "Neural Network fit of f(x) = cos(5x-1) e^{-x^2}";\
 			plot \
-				"data.txt" using 1:2 with points title "NN", \
-				"data.txt" using 1:4 with lines title "f(x)",\
+				"data/data.txt" every :::0::0 using 1:2 with points title "Neural network solution", \
+				cos(5 * x - 1) * exp(-x*x) with lines title "Exact solution" \
+		' | gnuplot
+
+first_derivative.svg:
+	echo '\
+			set terminal $(subst .,,$(suffix $@)) background "white"; \
+			set output "plots/$@"; \
+			set grid;\
+			set key right;\
+			set xlabel "x";\
+			set ylabel "y";\
+			set xrange[5:-5];\
+			set yrange[3:-3];\
+			set title "Neural Network fit of f(x) = cos(2x) first derivative";\
+			plot \
+				"data/data.txt" every :::1::1 using 1:2 with points title "Neural network first derivative solution", \
+				-2 * sin(2*x) with lines title "Analytical first derivative solution", \
+		' | gnuplot
+
+second_derivative.svg:
+	echo '\
+			set terminal $(subst .,,$(suffix $@)) background "white"; \
+			set output "plots/$@"; \
+			set grid;\
+			set key right;\
+			set xlabel "x";\
+			set ylabel "y";\
+			set xrange[5:-5];\
+			set yrange[5.5:-5.5];\
+			set title "Neural Network fit of f(x) = cos(2x) second derivative";\
+			plot \
+				"data/data.txt" every :::1::1 using 1:3 with points title "Neural network second derivative solution", \
+				-4 * cos(2*x) with lines title "Analytical double derivative solution" \
+		' | gnuplot
+
+integral.svg:
+	echo '\
+			set terminal $(subst .,,$(suffix $@)) background "white"; \
+			set output "plots/$@"; \
+			set grid;\
+			set key right;\
+			set xlabel "x";\
+			set ylabel "y";\
+			set xrange[5:-5];\
+			set yrange[1:-1];\
+			set title "Neural Network fit of f(x) = cos(2x) integral";\
+			plot \
+				"data/data.txt" every :::1::1 using 1:4 with points title "Neural network integral solution", \
+				0.5 * sin(2*x) with lines title "Analytical integral solution" \
 		' | gnuplot
 
 # Create executable
-$(MAIN): $(MATRIX_OBJ) $(QR_OBJ) $(NEWTON_OBJ) $(GRADIENT_OBJ) $(HESSIAN_OBJ) $(ANN_OBJ) $(MAIN_OBJ) 
+$(MAIN): $(MATRIX_OBJ) $(GRADIENT_OBJ) $(ANN_OBJ) $(MAIN_OBJ) $(QNEWTON_OBJ)
 	$(CXX) $^ $(LDLIBS) -o $@
 	./$(MAIN) > out.txt
 
@@ -55,23 +103,15 @@ $(MAIN): $(MATRIX_OBJ) $(QR_OBJ) $(NEWTON_OBJ) $(GRADIENT_OBJ) $(HESSIAN_OBJ) $(
 $(MATRIX_OBJ): $(MATRIX_SRC)
 	$(CXX) $(CXXFLAGS) -c $(filter %.cpp,$^) -o $@
 
-# Compile QR decomp
-$(QR_OBJ): $(QR_SRC)
-	$(CXX) $(CXXFLAGS) -c $(filter %.cpp,$^) -o $@
-
-# Compile newton
-$(NEWTON_OBJ): $(NEWTON_SRC)
-	$(CXX) $(CXXFLAGS) -c $(filter %.cpp,$^) -o $@
-
 # Compile gradient
 $(GRADIENT_OBJ): $(GRADIENT_SRC)
 	$(CXX) $(CXXFLAGS) -c $(filter %.cpp,$^) -o $@
 
-# Compile hessian
-$(HESSIAN_OBJ): $(HESSIAN_SRC)
+# Compile qnewton
+$(QNEWTON_OBJ): $(QNEWTON_SRC)
 	$(CXX) $(CXXFLAGS) -c $(filter %.cpp,$^) -o $@
 
-# Comple ANN
+# Compile ANN
 $(ANN_OBJ): $(ANN_SRC)
 	$(CXX) $(CXXFLAGS) -c $(filter %.cpp,$^) -o $@
 
@@ -81,7 +121,7 @@ $(MAIN_OBJ): $(MAIN_SRC)
 
 # Clean object files and executable
 clean:
-	rm -rf plots exe obj data.txt out.txt
+	rm -rf plots exe obj data out.txt
 
 # Phony targets
 .PHONY: all clean
