--- a/Homework/Spline/Makefile
+++ b/Homework/Spline/Makefile
@@ -5,20 +5,19 @@ LDLIBS = -lstdc++ -lm
 
 # Source files
 MAIN_SRC = src/main.cpp
-DATA_SRC = src/data.cpp
 SPLINE_SRC = src/spline.cpp
 
 # Object files
 MAIN_OBJ = obj/main.o
-DATA_OBJ = obj/data.o
 SPLINE_OBJ = obj/spline.o
 
 
 # Executable files
 MAIN = exe/main
-DATA = exe/data
 
-all: folders $(MAIN) $(DATA) lspline.svg qspline.svg
+all: folders $(MAIN) plots
+
+plots: lspline.svg qspline.svg cspline.svg gnuplot.svg
 
 folders:
 	mkdir -p exe
@@ -26,20 +25,21 @@ folders:
 	mkdir -p plots
 	mkdir -p data
 
-lspline.svg: $(DATA)
+lspline.svg:
 	echo '\
 		set terminal $(subst .,,$(suffix $@)) background "white"; \
 		set output "plots/$@"; \
 		set grid; \
-		set key bottom; \
+		set key top; \
 		set xlabel "x"; \
 		set ylabel "y"; \
-		set title "Linear Interpolation of Cosine"; \
+		set yrange[-2:4]; \
+		set title "Linear Interpolation of exp(-x^2) and its integral"; \
 		plot \
-			sin(x) with points, \
-			cos(x) with points, \
-			"data/data.txt" every :::0::0 using 1:2 with lines title "Linear interpolation", \
-			"data/data.txt" every :::0::0 using 1:3 with lines title "Linear integration" \
+			exp(-x*x) with lines, \
+			0.5 * sqrt(pi)*(erf(x)+erf(5)) with lines, \
+			"data/data.txt" every :::0::0 using 1:2 with points pointtype 7 title "Linear interpolation", \
+			"data/data.txt" every :::0::0 using 1:3 with points pointtype 7 title "Linear integration" \
 	' | gnuplot
 
 qspline.svg: 
@@ -47,38 +47,63 @@ qspline.svg:
 		set terminal $(subst .,,$(suffix $@)) background "white"; \
 		set output "plots/$@"; \
 		set grid;\
-		set key bottom;\
+		set key top;\
 		set xlabel "x";\
 		set ylabel "y";\
-		set title "Quadratic Interpolation of Cosine";\
+		set yrange[-2:4]; \
+		set title "Quadratic Interpolation of exp(-x^2), its derivative, and integral";\
 		plot \
-			cos(x) with points, \
-			sin(x) with points, \
-			-sin(x) with points, \
-			"data/data.txt" every :::0::0 using 1:4 with lines title "Quadratic interpolation",\
-			"data/data.txt" every :::0::0 using 1:5 with lines title "Quadratic integration",\
-			"data/data.txt" every :::0::0 using 1:6 with lines title "Quadratic derivative"\
+			exp(-x*x) with lines, \
+			-2 * x * exp(-x*x) with lines, \
+			0.5*sqrt(pi)*(erf(x)+erf(5)) with lines, \
+			"data/data.txt" every :::1::1 using 1:2 with points pointtype 7 title "Quadratic interpolation",\
+			"data/data.txt" every :::1::1 using 1:3 with points pointtype 7 title "Quadratic derivative",\
+			"data/data.txt" every :::1::1 using 1:4 with points pointtype 7 title "Quadratic integration"\
+	' | gnuplot 
+
+cspline.svg: 
+	echo '\
+		set terminal $(subst .,,$(suffix $@)) background "white"; \
+		set output "plots/$@"; \
+		set grid;\
+		set key top;\
+		set xlabel "x";\
+		set ylabel "y";\
+		set yrange[-2:4]; \
+		set title "Cubic Interpolation of Cosine";\
+		plot \
+			exp(-x*x) with lines, \
+			-2 * x * exp(-x*x) with lines, \
+			0.5*sqrt(pi)*(erf(x)+erf(5)) with lines, \
+			"data/data.txt" every :::2::2 using 1:2 with points pointtype 7 title "Cubic interpolation",\
+			"data/data.txt" every :::2::2 using 1:3 with points pointtype 7 title "Cubic derivative",\
+			"data/data.txt" every :::2::2 using 1:4 with points pointtype 7 title "Cubic integration"\
+	' | gnuplot 
+
+gnuplot.svg: 
+	echo '\
+		set terminal $(subst .,,$(suffix $@)) background "white"; \
+		set output "plots/$@"; \
+		set grid;\
+		set key top;\
+		set xlabel "x";\
+		set ylabel "y";\
+		set xrange[-5:5];\
+		set yrange[-2:4]; \
+		set title "Cubic Interpolation of Cosine";\
+		plot \
+			"data/data.txt" every :::3::3 using 1:2 smooth csplines title "Gnuplot cspline", \
+			"data/data.txt" every :::2::2 using 1:2 with points pointtype 7 title "My routine" \
 	' | gnuplot 
 
 
-
-
 # Create executable file for main
-$(MAIN): $(MAIN_OBJ) $(LSPLINE_OBJ) $(QSPLINE_OBJ) $(CSPLINE_OBJ)
+$(MAIN): $(MAIN_OBJ) $(SPLINE_OBJ) 
 	$(CXX) $^ $(LDLIBS) -o $@
 	./$@ > out.txt
 
-# Creaet executable file for data for splines
-$(DATA): $(DATA_OBJ) $(SPLINE_OBJ)
-	$(CXX) $^ $(LDLIBS) -o $@
-	./$@ > data/data.txt
-
 # Create object file for main
 $(MAIN_OBJ): $(MAIN_SRC)
-	$(CXX) $(CXXFLAGS) -c $(filter %.cpp,$^) -o $@
-
-# Create object file for data for splines
-$(DATA_OBJ): $(DATA_SRC)
 	$(CXX) $(CXXFLAGS) -c $(filter %.cpp,$^) -o $@
 
 # Create object file for linear spline
@@ -87,4 +112,4 @@ $(SPLINE_OBJ): $(SPLINE_SRC)
 
 
 clean:
-	rm -rf data exe obj plots out.txt data.txt
+	rm -rf data exe obj plots out.txt
