--- a/Exercises/Machine-Epsilon/Makefile
+++ b/Exercises/Machine-Epsilon/Makefile
@@ -3,7 +3,7 @@ LDLIBS = -lstdc++ -lm
 CXX = clang
 
 all: main
-	./main > output.txt
+	./main > out.txt
 main: objects/main.o objects/Integers.o objects/Machine-Epsilon.o objects/Parts.o
 	$(CXX) $(LDFLAGS) $^ $(LDLIBS) -o $@
 objects/main.o: headers/Integers.h headers/Machine-Epsilon.h src/main.cpp
@@ -15,7 +15,7 @@ objects/Integers.o: headers/Integers.h src/Integers.cpp
 objects/Machine-Epsilon.o: headers/Machine-Epsilon.h src/Machine-Epsilon.cpp
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS) -o $@ -c $(filter %.cpp,$^)
 clean:
-	$(RM) output.txt main objects/*.o
+	$(RM) out.txt main objects/*.o
 test:
 	@echo "CXX:" $(CXX)
 	@echo "RM:" $(RM)
